--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "individual-forward",
     "version": "1.0.0",
     "orientation": "portrait",
-    "entryPoint": "./src/App.tsx",
+    "entryPoint": "./src/app.tsx",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
