--- a/app.json
+++ b/app.json
@@ -20,14 +20,22 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyBMTj5oKMVoBPonXYX6ykNVm2pf4RCHUyE"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "app.shoku.individual.forward"
+      "package": "app.shoku.individual.forward",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyCp-BUoX8B8699rkbnb2P2CK4gXSeesVcc"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
