--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "react/prop-types": "off"
   }
 }
